--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: My DevOps Journey or how do I changed my life in 3 months (maybe) ?
+title: My DevOps Journey or how do I changed my life in 3 months ?
 description: Welcome to my free blog documenting my DevOps and Cloud learning path !
 theme: minima
